# TI4-assistant

./: main.py  pyproject.toml  {DB_FILENAME}
.devcontainer/: devcontainer.json
src/: main.py
src/core/: config.py  db.py
src/models/: enum.py  faction.py  game.py  player.py
src/routes/: admin.py  api.py  dev.py  home.py  pages.py  player.py
src/templates/: admin.html  base.html  home.html  player.html
src/templates/fragments/: faction-detail.html  factions.html
